新增日历对话框，时钟对话框等控件

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,4 +54,18 @@
         android:text="圆形进度条"
         tools:ignore="HardcodedText" />
 
+    <Button
+        android:id="@+id/bt_7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="日历对话框"
+        tools:ignore="HardcodedText" />
+
+    <Button
+        android:id="@+id/bt_8"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="时钟对话框"
+        tools:ignore="HardcodedText" />
+
 </LinearLayout>
